@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008-2012 by Walter Brisken                             *
+ *   Copyright (C) 2008-2013 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -33,7 +33,7 @@
 #include "fits.h"
 
 #define array_MAX_BANDS		32
-#define array_MAX_TONES		64
+#define array_MAX_TONES		1024
 #define array_MAX_STATES	4
 #define MAX_INPUT_FILES		4096
 
